liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define LOS_OK 0
#define OS_SYS_CLOCK 1000000
typedef int INT32;
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef void (*HWI_PROC_FUNC)(void);
typedef unsigned long long UINT64;
typedef struct ArchTickTimer {
  UINT32 freq;
  INT32 irqNum;
  UINT64 periodMax;
  UINT32 (*init)(HWI_PROC_FUNC tickHandler);
  UINT64 (*getCycle)(UINT32 *period);
  UINT64 (*reload)(UINT64 time);
  void (*lock)(void);
  void (*unlock)(void);
  HWI_PROC_FUNC tickHandler;
} ArchTickTimer;
/**
 * @ingroup los_tick
 * @brief Adjust the system tick timer clock frequency function hooks.
 *
 * @par Description:
 * This API is used to adjust the system tick timer clock frequency.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  param  [IN] Function parameters.
 *
 * @retval              0: Adjust the system tick timer clock frequency failed.
 * @retval more than zero: Adjust after the system tick timer clock frequency.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
typedef UINT32 (*SYS_TICK_FREQ_ADJUST_FUNC)(UINTPTR param);
/**
 * @ingroup los_tick
 * Define the CPU Tick structure.
 */
typedef struct TagCpuTick {
  UINT32 cntHi;
  UINT32 cntLo;
} TagCpuTick;
/**
 * @ingroup los_tick
 * Define the CPU Tick structure.
 */
typedef struct TagCpuTick CpuTick;
extern UINT64 OsTickTimerReload(UINT64 period);
extern void OsTickTimerBaseReset(UINT64 currTime);
extern UINT32 OsTickTimerInit(void);
extern void OsTickSysTimerStartTimeSet(UINT64 currTime);
/**
 * @ingroup los_tick
 * @brief Adjust the system tick timer clock frequency.
 *
 * @par Description:
 * This API is used to adjust the system tick timer clock frequency.
 * @attention
 * <ul>
 * <li>This function needs to be invoked only when the clock frequency of the system tick timer adjust as a result of
 * changing the CPU frequency.</li>
 * </ul>
 *
 * @param  handler [IN] Adjust the system tick timer clock frequency function hooks.
 * @param param   [IN] Function parameters.
 *
 * @retval LOS_OK or Error code.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_SysTickClockFreqAdjust(SYS_TICK_FREQ_ADJUST_FUNC handler,
                                         UINTPTR param);
/**
 * @ingroup los_tick
 * @brief Obtain the number of Ticks.
 *
 * @par Description:
 * This API is used to obtain the number of Ticks.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  None
 *
 * @retval UINT64 The number of Ticks.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT64 LOS_TickCountGet(void);
/**
 * @ingroup los_tick
 * @brief Obtain the number of cycles in one second.
 *
 * @par Description:
 * This API is used to obtain the number of cycles in one second.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  None
 *
 * @retval UINT32 Number of cycles obtained in one second.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_CyclePerTickGet(void);
/**
 * @ingroup los_tick
 * @brief Convert Ticks to milliseconds.
 *
 * @par Description:
 * This API is used to convert Ticks to milliseconds.
 * @attention
 * <ul>
 * <li>The number of milliseconds obtained through the conversion is 32-bit.</li>
 * </ul>
 *
 * @param  ticks  [IN] Number of Ticks. The value range is (0,OS_SYS_CLOCK).
 *
 * @retval UINT32 Number of milliseconds obtained through the conversion. Ticks are successfully converted to
 * milliseconds.
 * @par  Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see LOS_MS2Tick
 */
extern UINT32 LOS_Tick2MS(UINT32 ticks);
/**
 * @ingroup los_tick
 * @brief Convert milliseconds to Ticks.
 *
 * @par Description:
 * This API is used to convert milliseconds to Ticks.
 * @attention
 * <ul>
 * <li>If the parameter passed in is equal to 0xFFFFFFFF, the retval is 0xFFFFFFFF. Pay attention to the value to be
 * converted because data possibly overflows.</li>
 * </ul>
 *
 * @param  millisec  [IN] Number of milliseconds.
 *
 * @retval UINT32 Number of Ticks obtained through the conversion.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see LOS_Tick2MS
 */
extern UINT32 LOS_MS2Tick(UINT32 millisec);
/**
 * @ingroup los_tick
 * @brief Re-initializes the system tick timer.
 *
 * @par Description:
 * This API is used to re-initialize the system Tick timer.
 * @attention
 *
 * @param timer        [IN] Specify the tick timer.
 * @param tickHandler  [IN] Tick Interrupts the execution of the hook function.
 *
 * @retval LOS_OK or Error code.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern UINT32 LOS_TickTimerRegister(const struct ArchTickTimer *timer, HWI_PROC_FUNC tickHandler);
extern void LOS_UDelay(UINT64 microseconds);
extern void LOS_MDelay(UINT32 millisec);
extern UINT64 LOS_CurrNanosec(void);
/**
 * @ingroup  los_tick
 * @brief Handle the system tick timeout.
 *
 * @par Description:
 * This API is called when the system tick timeout and triggers the interrupt.
 *
 * @attention
 * <ul>
 * <li>None.</li>
 * </ul>
 *
 * @param none.
 *
 * @retval None.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern void OsTickHandler(void);
/**
 * @ingroup los_tick
 * @brief Convert cycles to milliseconds.
 *
 * @par Description:
 * This API is used to convert cycles to milliseconds.
 * @attention
 * <ul>
 * <li>None.</li>
 * </ul>
 *
 * @param  cpuTick  [IN]  Number of CPU cycles.
 * @param  msHi     [OUT] Upper 32 bits of the number of milliseconds.
 * @param  msLo     [OUT] Lower 32 bits of the number of milliseconds.
 *
 * @retval #LOS_ERRNO_SYS_PTR_NULL    0x02000011: Invalid parameter.
 * @retval #LOS_OK                   0:  Cycles are successfully converted to microseconds.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 OsCpuTick2MS(CpuTick *cpuTick, UINT32 *msHi, UINT32 *msLo);
extern UINT64 OsTickTimerReload(UINT64 period);
extern void OsTickTimerBaseReset(UINT64 currTime);
extern UINT32 OsTickTimerInit(void);
extern void OsTickSysTimerStartTimeSet(UINT64 currTime);
/**
 * @ingroup los_tick
 * @brief Adjust the system tick timer clock frequency.
 *
 * @par Description:
 * This API is used to adjust the system tick timer clock frequency.
 * @attention
 * <ul>
 * <li>This function needs to be invoked only when the clock frequency of the system tick timer adjust as a result of
 * changing the CPU frequency.</li>
 * </ul>
 *
 * @param  handler [IN] Adjust the system tick timer clock frequency function hooks.
 * @param param   [IN] Function parameters.
 *
 * @retval LOS_OK or Error code.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_SysTickClockFreqAdjust(SYS_TICK_FREQ_ADJUST_FUNC handler,
                                         UINTPTR param);
/**
 * @ingroup los_tick
 * @brief Obtain the number of Ticks.
 *
 * @par Description:
 * This API is used to obtain the number of Ticks.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  None
 *
 * @retval UINT64 The number of Ticks.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT64 LOS_TickCountGet(void);
/**
 * @ingroup los_tick
 * @brief Obtain the number of cycles in one second.
 *
 * @par Description:
 * This API is used to obtain the number of cycles in one second.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  None
 *
 * @retval UINT32 Number of cycles obtained in one second.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_CyclePerTickGet(void);
/**
 * @ingroup los_tick
 * @brief Convert Ticks to milliseconds.
 *
 * @par Description:
 * This API is used to convert Ticks to milliseconds.
 * @attention
 * <ul>
 * <li>The number of milliseconds obtained through the conversion is 32-bit.</li>
 * </ul>
 *
 * @param  ticks  [IN] Number of Ticks. The value range is (0,OS_SYS_CLOCK).
 *
 * @retval UINT32 Number of milliseconds obtained through the conversion. Ticks are successfully converted to
 * milliseconds.
 * @par  Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see LOS_MS2Tick
 */
extern UINT32 LOS_Tick2MS(UINT32 ticks);
/**
 * @ingroup los_tick
 * @brief Convert milliseconds to Ticks.
 *
 * @par Description:
 * This API is used to convert milliseconds to Ticks.
 * @attention
 * <ul>
 * <li>If the parameter passed in is equal to 0xFFFFFFFF, the retval is 0xFFFFFFFF. Pay attention to the value to be
 * converted because data possibly overflows.</li>
 * </ul>
 *
 * @param  millisec  [IN] Number of milliseconds.
 *
 * @retval UINT32 Number of Ticks obtained through the conversion.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see LOS_Tick2MS
 */
extern UINT32 LOS_MS2Tick(UINT32 millisec);
/**
 * @ingroup los_tick
 * @brief Re-initializes the system tick timer.
 *
 * @par Description:
 * This API is used to re-initialize the system Tick timer.
 * @attention
 *
 * @param timer        [IN] Specify the tick timer.
 * @param tickHandler  [IN] Tick Interrupts the execution of the hook function.
 *
 * @retval LOS_OK or Error code.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see
 */
extern UINT32 LOS_TickTimerRegister(const struct ArchTickTimer *timer, HWI_PROC_FUNC tickHandler);
extern void LOS_UDelay(UINT64 microseconds);
extern void LOS_MDelay(UINT32 millisec);
extern UINT64 LOS_CurrNanosec(void);
/**
 * @ingroup  los_tick
 * @brief Handle the system tick timeout.
 *
 * @par Description:
 * This API is called when the system tick timeout and triggers the interrupt.
 *
 * @attention
 * <ul>
 * <li>None.</li>
 * </ul>
 *
 * @param none.
 *
 * @retval None.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern void OsTickHandler(void);
/**
 * @ingroup los_tick
 * @brief Convert cycles to milliseconds.
 *
 * @par Description:
 * This API is used to convert cycles to milliseconds.
 * @attention
 * <ul>
 * <li>None.</li>
 * </ul>
 *
 * @param  cpuTick  [IN]  Number of CPU cycles.
 * @param  msHi     [OUT] Upper 32 bits of the number of milliseconds.
 * @param  msLo     [OUT] Lower 32 bits of the number of milliseconds.
 *
 * @retval #LOS_ERRNO_SYS_PTR_NULL    0x02000011: Invalid parameter.
 * @retval #LOS_OK                   0:  Cycles are successfully converted to microseconds.
 * @par Dependency:
 * <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 OsCpuTick2MS(CpuTick *cpuTick, UINT32 *msHi, UINT32 *msLo);