liteOS-M/rust_kernel/kernel/test/src/include/los_task_h.rs

#[test]
fn bindgen_test_layout_TagSysTime() {
    assert_eq!(
        ::std::mem::size_of::<TagSysTime>(),
        8usize,
        concat!("Size of: ", stringify!(TagSysTime))
    );
    assert_eq!(
        ::std::mem::align_of::<TagSysTime>(),
        2usize,
        concat!("Alignment of ", stringify!(TagSysTime))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).uwYear as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(uwYear)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).ucMonth as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(ucMonth)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).ucDay as *const _ as usize },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(ucDay)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).ucHour as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(ucHour)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).ucMinute as *const _ as usize },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(ucMinute)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).ucSecond as *const _ as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(ucSecond)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagSysTime>())).ucWeek as *const _ as usize },
        7usize,
        concat!(
            "Offset of field: ",
            stringify!(TagSysTime),
            "::",
            stringify!(ucWeek)
        )
    );
}
#[doc = " @ingroup los_tick"]
#[doc = " system time structure."]
pub type SYS_TIME_S = TagSysTime;
extern "C" {
    pub fn OsTickTimerReload(period: UINT64) -> UINT64;
}
extern "C" {
    pub fn OsTickTimerBaseReset(currTime: UINT64);
}
extern "C" {
    pub fn OsTickTimerInit() -> UINT32;
}
extern "C" {
    pub fn OsTickSysTimerStartTimeSet(currTime: UINT64);
}
#[doc = " @ingroup los_tick"]
#[doc = " @brief Adjust the system tick timer clock frequency function hooks."]
#[doc = ""]
#[doc = " @par Description:"]
#[doc = " This API is used to adjust the system tick timer clock frequency."]
#[doc = " @attention"]
#[doc = " <ul>"]
#[doc = " <li>None</li>"]
#[doc = " </ul>"]
#[doc = ""]
#[doc = " @param  param  [IN] Function parameters."]
#[doc = ""]
#[doc = " @retval              0: Adjust the system tick timer clock frequency failed."]
#[doc = " @retval more than zero: Adjust after the system tick timer clock frequency."]
#[doc = " @par Dependency:"]
#[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
#[doc = " @see None"]
pub type SYS_TICK_FREQ_ADJUST_FUNC =
    ::std::option::Option<unsafe extern "C" fn(param: UINTPTR) -> UINT32>;
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Adjust the system tick timer clock frequency."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to adjust the system tick timer clock frequency."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>This function needs to be invoked only when the clock frequency of the system tick timer adjust as a result of"]
    #[doc = " changing the CPU frequency.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  handler [IN] Adjust the system tick timer clock frequency function hooks."]
    #[doc = " @param param   [IN] Function parameters."]
    #[doc = ""]
    #[doc = " @retval LOS_OK or Error code."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None"]
    pub fn LOS_SysTickClockFreqAdjust(handler: SYS_TICK_FREQ_ADJUST_FUNC, param: UINTPTR)
        -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Obtain the number of Ticks."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the number of Ticks."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  None"]
    #[doc = ""]
    #[doc = " @retval UINT64 The number of Ticks."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None"]
    pub fn LOS_TickCountGet() -> UINT64;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Obtain the number of cycles in one second."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to obtain the number of cycles in one second."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  None"]
    #[doc = ""]
    #[doc = " @retval UINT32 Number of cycles obtained in one second."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None"]
    pub fn LOS_CyclePerTickGet() -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Convert Ticks to milliseconds."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to convert Ticks to milliseconds."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>The number of milliseconds obtained through the conversion is 32-bit.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  ticks  [IN] Number of Ticks. The value range is (0,OS_SYS_CLOCK)."]
    #[doc = ""]
    #[doc = " @retval UINT32 Number of milliseconds obtained through the conversion. Ticks are successfully converted to"]
    #[doc = " milliseconds."]
    #[doc = " @par  Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_MS2Tick"]
    pub fn LOS_Tick2MS(ticks: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Convert milliseconds to Ticks."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to convert milliseconds to Ticks."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>If the parameter passed in is equal to 0xFFFFFFFF, the retval is 0xFFFFFFFF. Pay attention to the value to be"]
    #[doc = " converted because data possibly overflows.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  millisec  [IN] Number of milliseconds."]
    #[doc = ""]
    #[doc = " @retval UINT32 Number of Ticks obtained through the conversion."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see LOS_Tick2MS"]
    pub fn LOS_MS2Tick(millisec: UINT32) -> UINT32;
}
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Re-initializes the system tick timer."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to re-initialize the system Tick timer."]
    #[doc = " @attention"]
    #[doc = ""]
    #[doc = " @param timer        [IN] Specify the tick timer."]
    #[doc = " @param tickHandler  [IN] Tick Interrupts the execution of the hook function."]
    #[doc = ""]
    #[doc = " @retval LOS_OK or Error code."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see"]
    pub fn LOS_TickTimerRegister(timer: *const ArchTickTimer, tickHandler: HWI_PROC_FUNC)
        -> UINT32;
}
extern "C" {
    pub fn LOS_UDelay(microseconds: UINT64);
}
extern "C" {
    pub fn LOS_MDelay(millisec: UINT32);
}
extern "C" {
    pub fn LOS_CurrNanosec() -> UINT64;
}
extern "C" {
    #[doc = " @ingroup  los_tick"]
    #[doc = " @brief Handle the system tick timeout."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is called when the system tick timeout and triggers the interrupt."]
    #[doc = ""]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param none."]
    #[doc = ""]
    #[doc = " @retval None."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn OsTickHandler();
}
#[doc = " @ingroup los_tick"]
#[doc = " Define the CPU Tick structure."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct TagCpuTick {
    pub cntHi: UINT32,
    pub cntLo: UINT32,
}
#[test]
fn bindgen_test_layout_TagCpuTick() {
    assert_eq!(
        ::std::mem::size_of::<TagCpuTick>(),
        8usize,
        concat!("Size of: ", stringify!(TagCpuTick))
    );
    assert_eq!(
        ::std::mem::align_of::<TagCpuTick>(),
        4usize,
        concat!("Alignment of ", stringify!(TagCpuTick))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagCpuTick>())).cntHi as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(TagCpuTick),
            "::",
            stringify!(cntHi)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<TagCpuTick>())).cntLo as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(TagCpuTick),
            "::",
            stringify!(cntLo)
        )
    );
}
#[doc = " @ingroup los_tick"]
#[doc = " Define the CPU Tick structure."]
pub type CpuTick = TagCpuTick;
extern "C" {
    #[doc = " @ingroup los_tick"]
    #[doc = " @brief Convert cycles to milliseconds."]
    #[doc = ""]
    #[doc = " @par Description:"]
    #[doc = " This API is used to convert cycles to milliseconds."]
    #[doc = " @attention"]
    #[doc = " <ul>"]
    #[doc = " <li>None.</li>"]
    #[doc = " </ul>"]
    #[doc = ""]
    #[doc = " @param  cpuTick  [IN]  Number of CPU cycles."]
    #[doc = " @param  msHi     [OUT] Upper 32 bits of the number of milliseconds."]
    #[doc = " @param  msLo     [OUT] Lower 32 bits of the number of milliseconds."]
    #[doc = ""]
    #[doc = " @retval #LOS_ERRNO_SYS_PTR_NULL    0x02000011: Invalid parameter."]
    #[doc = " @retval #LOS_OK                   0:  Cycles are successfully converted to microseconds."]
    #[doc = " @par Dependency:"]
    #[doc = " <ul><li>los_tick.h: the header file that contains the API declaration.</li></ul>"]
    #[doc = " @see None."]
    pub fn OsCpuTick2MS(cpuTick: *mut CpuTick, msHi: *mut UINT32, msLo: *mut UINT32) -> UINT32;
}
